# rust-csv

./: .gitignore  Dockerfile
.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_reader.rs  fuzz_reader_delim.rs  fuzz_reader_nohead.rs  fuzz_reader_serde.rs  fuzz_writer.rs
mayhemfiles/: Mayhemfile_Reader  Mayhemfile_Reader_Delim  Mayhemfile_Reader_Nohead  Mayhemfile_Reader_Serde  Mayhemfile_Writer
